fixed menu gap

--- a/stylesheets/toolbar.css
+++ b/stylesheets/toolbar.css
@@ -143,11 +143,11 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	padding-top: 2px;
 }
 
 .toolbar> table > tbody > tr > td > ul.topmenu li {
 	display: block;
+	padding-top: 2px;
 	padding-left: 5px;
 	padding-right: 5px;
 	float: left;
@@ -165,7 +165,7 @@
 	background: rgba(215, 215, 215, 0.70);
 	list-style: none;
 	position: absolute; /*--Important - Keeps submenu from affecting main navigation flow--*/
-	left: 0; top: 35px;
+	left: 0; top: 27px;
 	margin: 0; padding: 0;
 	display: none;
 	float: left;
